gh-334 fix R&D alignment (+ feature for products as well)

--- a/_scss/templates/_template-use-case.scss
+++ b/_scss/templates/_template-use-case.scss
@@ -3,6 +3,9 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  .card__top {
+    min-height: 2rem;
+  }
   &:first-child {
     background-image: url('/img/decoration/use-case-1.jpg');
   }
